# job-hunting

./: README.md
cv/: 面试应对指南.md  项目压力面试应对指南.md
cv/Chinese-Resume-in-Typst-main/: resume.typ  simple-resume.typ
cv/面试准备/: 01_C++基础面试题.md  02_数据结构与算法面试题.md  03_项目详解与问答_核心.md  04_计算机网络面试题.md  05_操作系统面试题.md  06_数据库MySQL面试题.md  07_分布式系统Raft面试题.md  08_Linux开发与工具面试题.md  README.md  面试前一天_快速复习卡.md
doc/实习信息/: cpp_requirements.md
src/project_cpp/memory_pool/memory_poolv1/: .gitignore  BUILD.md  CMakeLists.txt  QUICK_START.md  README.md  build.bat  build.sh
src/project_cpp/memory_pool/memory_poolv1/include/: MemoryPool.h
src/project_cpp/memory_pool/memory_poolv1/src/: MemoryPool.cpp
src/project_cpp/memory_pool/memory_poolv1/tests/: test.cpp
src/project_cpp/memory_pool/memory_poolv1/tutorials/: learn_mutex.cpp
src/project_cpp/raft_project/: raft.typ
src/project_go/go_learn/: error.go  fib_list.go  hello_world.go  interface.go  string_slices.go
typs/: cpp_8gu.typ  cpp_base.typ  cpp_concurrent_programming.typ  cpp_memory.typ  cpp_network.typ  cpp_note.typ  cpp_oop.typ  go_note.typ  memory_pool.typ  os_8gu.typ  template.typ
typs/笔试经验/: tencent.typ
typs/算法/: tricks.typ  代码随想录1刷.typ
